theme/2014/static/scss/menu.scss
$fluid-black: rgba(39, 39, 39, 1);
$fluid-gray: rgba(176, 176, 176, 1);
$fluid-red: rgba(255, 52, 53, 1);
$transparent: rgba(0, 0, 0, 0);
$white: rgba(255, 255, 255, 1);

@mixin menu-bars {
  content: '';
  left: 30px;
  position: absolute;
  width: 25px;
}

@mixin menu-cross {
  background: $white;
  top: 35px;
  width: 25px;
}

@mixin submenu-plus {
  background: $white;
  content: '';
  position: absolute;
}

.search-box {
  transform: translateY(-80px);
  transition: transform ease 500ms;
  widows: 240px;
}

.search {
  &:focus-within {
    .search-box {
      transform: translateY(0);
    }
  }
}

.cssmenu {
  background: $fluid-black;
  line-height: 1;
}

.menu-button {
  &::before {
    @include menu-bars;
    background: $white;
    height: 2px;
    top: 28px;
  }

  &::after {
    @include menu-bars;
    border-bottom: 2px solid $white;
    border-top: 2px solid $white;
    height: 9px;
    top: 35px;
  }

  &.menu-opened {
    border-bottom: 0;

    &::before {
      @include menu-cross;
      transform: rotate(-45deg);
    }

    &::after {
      @include menu-cross;
      border: 0;
      height: 2px;
      transform: rotate(45deg);
    }
  }
}

.m-closed,
.sm-closed {
  display: none;
}

.m-opened {
  display: block;
  margin: 0;
  max-height: 75vh;
  overflow-y: auto;

  li {
    border-bottom: 1px solid $fluid-gray;
    display: block;
    margin: 0 30px;
    position: relative;

    &:last-child {
      border-bottom: 0;
    }
  }
}

.active-block {
  img {
    display: none;
  }
}

.submenu-button {

  &.submenu-opened {

    &::before {
      display: none;
    }

    &::after {
      background: $white;
    }
  }

  &::before {
    @include submenu-plus;
    height: 20px;
    right: 22px;
    top: 20px;
    width: 3px;
  }

  &::after {
    @include submenu-plus;
    height: 3px;
    right: 13px;
    top: 28px;
    width: 20px;
  }
}

.sm-opened {
  display: block;
  position: relative;

  li {
    height: 61px;
    margin: 0;

    &:first-child {
      border-top: 1px solid $fluid-gray;
    }
  }
}

@media (min-width: 960px) {

  .contact {
    display: block;
  }

  .search {
    display: inline-block;
    margin-left: 20px;
  }

  .cssmenu {
    height: 72px;
    padding-left: 50px;

    a {
      font-size: 16px;

      &:hover {
        color: $white;
      }
    }
  }

  .m-opened {
    height: 72px;
    max-height: unset;
    overflow-y: unset;

    li {
      border-bottom: 0;
      display: inline-block;
      margin: 0;
      min-height: 72px;
      padding-top: 7px;
      width: auto;

      &:hover {
        background-color: $fluid-red;
      }
    }
  }

  .has-sub {
    a {
      padding-right: 15px;
    }

    &:hover {
      ul {
        background: $fluid-black;
        display: block;
        margin-top: 4px;
      }

      &::before {
        display: none;
      }
    }
  }

  .active-block {
    img {
      display: block;
      float: right;
      margin: -44px 3px 0 0;
      width: 10px;
    }
  }

  .sm-opened {
    display: none;
    left: -20px;
    position: absolute;

    li {
      min-height: 60px;
      min-width: 260px;
      padding-top: 0;

      &:first-child {
        border-top: 0;
      }
    }
  }
}

